<resources>
    <string name="app_name">Parcel Paladin</string>
    <string name="welcome">Welcome to Parcel Paladin!</string>
    <string name="loginText">Please log in:</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="SignIn">Sign in</string>
    <string name="noAccount">Don\'t have an account? Sign up here!</string>
    <string name="yesAccount">Have an account already? Sign in here!</string>
    <string name="appLogo">appLogo</string>

    <string name="userReg">User Registration</string>
    <string name="name">Name</string>
    <string name="signUp">Sign up</string>
    <string name="regName">Please enter your full name</string>
    <string name="regEmail">Please enter your email</string>
    <string name="regPassword">Create a password</string>
    <string name="regPasswordConfirm">Confirm your password</string>
    <string name="startButton">Let\'s start!</string>

    <string name="regWelcome">Welcome!</string>
    <string name="regIntro">Thanks for setting up your account! Let\'s start off with some basic account info.</string>
    <string name="regBegin">To begin, please plug in your new Parcel Paladin Box and wait for a display to appear on the screen.</string>
    <string name="boxIDStep">When your box ID shows up, type it in here!</string>
    <string name="boxID">Box ID</string>

    <string name="great">Great!</string>
    <string name="nextStep">Alright! Now, to connect your account to your locker, please scan this code on your box.</string>
    <string name="scanDone">When the box says \"User added,\" go ahead and press finish.</string>
    <string name="finish">Finish!</string>
    <string name="qrCodeImage">qrCodeImage</string>
    <string name="AccountSyncWait">Please wait while we sync your account</string>
    <string name="SyncSuccessful">Sync Successful!</string>
    <string name="title_activity_track">Track</string>
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->

</resources>
